add lesson #08 nb, update #07 nb

--- a/lesson-07/class_07.ipynb
+++ b/lesson-07/class_07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "a947fd7e-b6cc-4bc2-98eb-29c75485c5b8",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "f53726f0-f669-45ef-ac26-5774ada90871",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "eefd3467-945e-4860-931c-884691d7158f",
    "metadata": {},
    "outputs": [
@@ -209,8 +209,8 @@
      "text": [
       "data before update {1: 'initial_one'}\n",
       "update_data {1: 'initial_one'}\n",
-      "finished update_data {1: 'one', ('str', 42): 'str42'}\n",
-      "data after update {1: 'one', ('str', 42): 'str42'}\n"
+      "finished update_data {1: 'one', ('str', 42): 'str42', 'pers': <__main__.Person object at 0x1123d6cf0>}\n",
+      "data after update {1: 'one', ('str', 42): 'str42', 'pers': <__main__.Person object at 0x1123d6cf0>}\n"
      ]
     }
    ],
@@ -225,12 +225,12 @@
     "\n",
     "    data[1] = \"one\"\n",
     "    data[(\"str\", 42)] = \"str42\"\n",
-    "    #data[\"pers\"] = Person(\"steve\")\n",
+    "    data[\"pers\"] = Person(\"steve\")\n",
     "\n",
     "    print(\"finished update_data\", data)\n",
     "\n",
     "\n",
-    "with mp.Manager() as manager:\n",
+    "with proc_ctx.Manager() as manager:\n",
     "    data = manager.dict()\n",
     "    data[1] = \"initial_one\"\n",
     "    print(\"data before update\", data)\n",
@@ -239,21 +239,56 @@
     "    proc.start()\n",
     "    proc.join()\n",
     "\n",
-    "    print(\"data after update\", data)"
+    "    print(\"data after update\", data)\n",
+    "    backup = dict(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "758b7fcf-1502-4e8a-99d7-0033efe6b8fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Person at 0x1123d4ec0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backup[\"pers\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ae8ffa9d-5ba4-46f4-a14d-adbbc0627962",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'one', ('str', 42): 'str42', 'pers': <__main__.Person at 0x1123d4ec0>}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backup"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d5e76bf-df6d-4ccb-b781-044e0baf0bb7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "758b7fcf-1502-4e8a-99d7-0033efe6b8fa",
+   "id": "f6fd84e8-cb3e-409b-9568-0835464d42e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1107,7 +1142,408 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "078092c5-ba41-4913-819a-e48e960146ab",
+   "id": "9500b0f0-5866-4d5a-b744-ab96ed9a5d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a634d368-6fd1-4d8c-af27-252018cfb7bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d810e1a7-84bf-47f5-a771-7ab582c61db0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d83c1b23-1827-4543-8781-8b45e579b8d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import asyncio\n",
+    "import aiohttp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6f78dfd2-f741-4cf6-8408-1e76f6913268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_timeit(coro):\n",
+    "    async def inner(*args, **kwargs):\n",
+    "        t1 = time.time()\n",
+    "        try:\n",
+    "            res = await coro(*args, **kwargs)\n",
+    "        finally:\n",
+    "            t2 = time.time()\n",
+    "            print(f\"total time: {t2 - t1}\")\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "    return inner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "78006712-7485-47e0-bdb6-1dbf79205bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "queue\n",
+      "workers\n",
+      "fetch_worker started worker_0\n",
+      "fetch_worker started worker_1\n",
+      "fetch_worker started worker_2\n",
+      "fetch_worker started worker_3\n",
+      "fetch_worker started worker_4\n",
+      "fetch_worker started worker_5\n",
+      "fetch_worker started worker_6\n",
+      "fetch_worker started worker_7\n",
+      "fetch_worker started worker_8\n",
+      "fetch_worker started worker_9\n",
+      "total time: 7.023946046829224\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL = \"https://docs.python.org/3/whatsnew/3.13.html\"\n",
+    "URLS = [URL] * 20\n",
+    "WORKERS = 10\n",
+    "\n",
+    "\n",
+    "async def fetch_url(session, sem, url):\n",
+    "    async with sem:\n",
+    "        await asyncio.sleep(1)\n",
+    "        # async with session.get(url) as resp:\n",
+    "        #     return await resp.text()\n",
+    "\n",
+    "\n",
+    "async def fetch_worker(session, que, sem, name):\n",
+    "    print(\"fetch_worker started\", name)\n",
+    "    while True:\n",
+    "        url = await que.get()\n",
+    "\n",
+    "        try:\n",
+    "            result = await fetch_url(session, sem, url)\n",
+    "        except Exception as err:\n",
+    "            print(\"error\", err)\n",
+    "        finally:\n",
+    "            que.task_done()\n",
+    "\n",
+    "    print(\"fetch_worker finished\", name)\n",
+    "\n",
+    "\n",
+    "@do_timeit\n",
+    "async def run():\n",
+    "    que = asyncio.Queue()\n",
+    "    for url in URLS:\n",
+    "        await que.put(url)\n",
+    "\n",
+    "    print(\"queue\")\n",
+    "\n",
+    "    sem = asyncio.Semaphore(3)\n",
+    "\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        workers = [\n",
+    "            asyncio.create_task(\n",
+    "                fetch_worker(session, que, sem, f\"worker_{i}\")\n",
+    "            )\n",
+    "            for i in range(WORKERS)\n",
+    "        ]\n",
+    "        print(\"workers\")\n",
+    "\n",
+    "        await que.join()\n",
+    "\n",
+    "        for worker in workers:\n",
+    "            worker.cancel()\n",
+    "\n",
+    "\n",
+    "await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a856b5-9106-4f41-8ede-c098514b2850",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3406ded1-9caf-433c-bfa8-7a56da5b03ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "66cdb38f-5a5d-481c-a0c0-c3ccacb10dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=5\n",
+      "finish blocking api n=5\n",
+      "start non-blocking api n=5\n",
+      "finish non-blocking api n=5\n",
+      "total time: 10.006846189498901\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    time.sleep(n)\n",
+    "\n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "@do_timeit\n",
+    "async def run(n):\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "\n",
+    "\n",
+    "await run(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "db3e1414-e922-4191-9565-3ff0a49e565c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=5\n",
+      "start non-blocking api n=5\n",
+      "finish non-blocking api n=5\n",
+      "finish blocking api n=5\n",
+      "total time: 5.005144119262695\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.to_thread(time.sleep, n)\n",
+    "\n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "@do_timeit\n",
+    "async def run(n):\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "\n",
+    "\n",
+    "await run(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1bea60a1-5e40-46bb-b09f-aa0206b38dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import concurrent.futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c9081761-0d54-454a-b6ca-863e331fa980",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "concurrent.futures._base.Future"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concurrent.futures.Future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "cdc0fce4-011e-4d62-8943-25ec36b41ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio.futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "303a2bc6-56e3-4062-aade-c70a61f6664f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concurrent.futures.Future is asyncio.futures.Future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c793921-bd56-4378-8df6-00931f4e4824",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00eeb733-bc9a-4eb8-926c-b73d8fc3f2ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "e449f421-9c38-4812-92fe-8dc0f8a0b98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=2\n",
+      "finish blocking api n=2\n",
+      "start non-blocking api n=2\n",
+      "finish non-blocking api n=2\n",
+      "total time: 3.9637069702148438\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    res = factorial(350_000)\n",
+    "\n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "@do_timeit\n",
+    "async def run(n):\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "\n",
+    "\n",
+    "await run(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "b67f6dec-d250-4433-bda5-e87a13f9c2b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start blocking api n=2\n",
+      "start non-blocking api n=2\n",
+      "finish blocking api n=2\n",
+      "finish non-blocking api n=2\n",
+      "total time: 2.316499948501587\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def bloking_api(n):\n",
+    "    print(f\"start blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.to_thread(factorial, 350_000)\n",
+    "\n",
+    "    print(f\"finish blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "async def non_blocking_api(n):\n",
+    "    print(f\"start non-blocking api {n=}\")\n",
+    "\n",
+    "    await asyncio.sleep(n)\n",
+    "    print(f\"finish non-blocking api {n=}\")\n",
+    "\n",
+    "\n",
+    "@do_timeit\n",
+    "async def run(n):\n",
+    "    await asyncio.gather(bloking_api(n), non_blocking_api(n))\n",
+    "\n",
+    "\n",
+    "await run(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f99235ce-c543-46ce-b20b-1894461097b5",
    "metadata": {},
    "outputs": [],
    "source": []
