add lesson #09 nb, update #08 nb

--- a/lesson-08/class_08.ipynb
+++ b/lesson-08/class_08.ipynb
@@ -1057,6 +1057,214 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e07c3e0-10b6-490e-a166-574fe17e5a2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1510ca19-56c7-42c1-92a8-26c422ad81c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2ec9764d-e9a2-4378-b968-3f88032dae10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "\n",
+    "class Point2D(Point):\n",
+    "    __slots__ = (\"x\", \"y\")\n",
+    "\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c5908ef1-3d34-4356-901d-5492c9251c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Point2D(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5859e158-ab10-4fb4-a9b9-57a16ac1a855",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0fa0a258-b7fb-4213-acd1-732e87ecbdec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b7ae2640-101d-40e7-b948-5a32e92e9bce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b781fd82-8cb4-4a94-b05b-6b9b4c3605aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "304"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof(p.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4b4c78ea-22bf-4ffc-873f-313c881fafbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af7181af-a875-4a70-9ea9-e9e8648d446d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "224"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof({1: 11})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a0f53409-1030-4c9f-bc6b-fcc7b39853f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 224 1\n",
+      "1 224 2\n",
+      "2 224 3\n",
+      "3 224 4\n",
+      "4 224 5\n",
+      "5 352 6\n",
+      "6 352 7\n",
+      "7 352 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "dct = {}\n",
+    "\n",
+    "for i in range(8):\n",
+    "    dct[i] = i\n",
+    "    print(i, sys.getsizeof(dct), len(dct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff27c69c-2676-434f-9e3e-e5b24f85c218",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdbf8a5e-c45a-4b1e-90b3-3ab2210258a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
